--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,46 @@
+
+$transition-duration: 0.3s;
+$section-width: 1296px;
+$section-padding: 0px 40px;
+$photos-width: 95px;
+
+// Padding
 $padding-container: 16px 68px 0px 68px;
+$padding-section: 60px 72px;
+$padding-section-0: 60px 0px;
+$bottom-image-padding: 15px 0;
+
+// Color, border and shadow
 $background-color-white: #ffffff;
+$color-link: #000;
+$color-blue:  #2b59ff;
+$photos-img-border: 2px solid white;
+$background-color-page: #fafafa;
+$bottom-image-bg-color: rgba(0, 0, 0, 0.7);
+$bottom-image-div-last-radius: 8px;
+$color-text-section-5: white;
+$border-footer-div-first: 1px solid #b4b4b4;
+
+// Fonts
 $font-family-body: "Inter", sans-serif;
 $font-family-heading: "Roboto Slab";
+
+// Gap 
 $gap-logo: 6px;
+$gap-action: 20px;
+$section-gap: 97px;
+$gap-bottom-image: 148px;
+$gap-bottom-image-div-inner: 67px;
+$gap-inner-div-4: 21px;
+$gap-innermost-div-4: 11px;
+$gap-div-5: 79px;
+$gap-inner-innermost-div-5: 6.3px;
+$gap-footer-div: 26px;
+$gap-footer-nav: 240px;
+$gap-footer-div-last: 750px;
+$gap-footer-div-last-inner: 31px;
+
+// Px size
 $size-35 : 35px;
 $size-16 : 16px;
 $size-32: 32px;
@@ -23,19 +61,13 @@ $size-18: 18px;
 $size-86: 86px;
 $size-64: 64px;
 $size-19: 19px;
-$gap-action: 20px;
+
+// Font structure
 $font-weight-600: 600;
 $font-weight-action: 500;
-$color-link: #000;
-$color-blue:  #2b59ff;
-$transition-duration: 0.3s;
-$font-size-h2: 30px;
 $line-height-h1: 43px;
-$section-width: 1296px;
-$section-padding: 0px 40px;
-$section-gap: 97px;
-$photos-width: 95px;
-$photos-img-border: 2px solid white;
+
+// Article 2
 $article2-width: 660px;
 $article2-div-width: 550px;
 $article2-img-width: 351px;
@@ -52,31 +84,18 @@ $article2-aside-first-width: 330px;
 $article2-aside-last-height: 108px;
 $article2-aside-last-gap: 18.5px;
 $article2-aside-last-p-font-size: 12.5px;
-$background-color-page: #fafafa;
-$padding-section: 60px 72px;
-$padding-section-0: 60px 0px;
+
+
+
 $div1-height: 320px;
-$bottom-image-bg-color: rgba(0, 0, 0, 0.7);
-$bottom-image-padding: 15px 0;
-$gap-bottom-image: 148px;
-$gap-bottom-image-div-inner: 67px;
+
 $bottom-image-div-last-bg-color: #de4141;
-$bottom-image-div-last-radius: 8px;
 $bottom-image-div-last-height: 42px;
-$gap-inner-div-4: 21px;
 $inner-div-width-4: 309px;
-$gap-innermost-div-4: 11px;
 $font-weight-700: 700;
-$color-text-section-5: white;
-$gap-div-5: 79px;
 $inner-div-margin: 0 auto;
 $p-font-size-5: 23px;
-$gap-inner-innermost-div-5: 6.3px;
 $p-font-size-inner-5: 13.5px;
 $h2-width-6: 519px;
-$gap-footer-div: 26px;
-$gap-footer-nav: 240px;
 $width-footer-div-first: 1293px;
-$border-footer-div-first: 1px solid #b4b4b4;
-$gap-footer-div-last: 750px;
-$gap-footer-div-last-inner: 31px;
+
